# WhiteBox

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Client.cpp  Client.h  ClientEmulator.sln  EmulatorClient.cpp  EmulatorClient.h  EmulatorClient.rc  EmulatorClient.sln  EmulatorClient.ui  EmulatorClient.vcxproj  EmulatorClient.vcxproj.filters  LogHelper.h  LuaInterface.h  LuaScriptSystem.h  MainWindow.cpp  MainWindow.h  MessageIgnore.ui  Module.h  ModuleLogin.cpp  ModuleLogin.h  MsgDetailDialog.cpp  MsgDetailDialog.h  MsgEditorDialog.cpp  MsgEditorDialog.h  MsgIgnoreDialog.h  NetManager.cpp  NetManager.h  ProtoManager.cpp  ProtoManager.h  README.md  Session.cpp  Session.h  Setting.ui  SettingDialog.cpp  Style.h  WhiteBox.sln  cache.json  config.ini  (+4 more)
dialog/: MsgDetailDialog.cpp  MsgEditorDialog.cpp  MsgEditorDialog.h  MsgIgnoreDialog.cpp  MsgIgnoreDialog.h  ProtoSelectDialog.cpp  ProtoSelectDialog.h
example/: colx_login.lua  lw.lua  script.lua  script_example.lua
example/lua script/: script_template.lua
form/: EmulatorClient.ui  MessageDetail.ui  MessageEditor.ui  ProtoPathSelect.ui
luaScript/: script.lua
net/: ClientMessageSubject.cpp  ClientMessageSubject.h  IClientNetEvent.h
proto/: ProtoManager.cpp  ProtoManager.h
protobuf/: protobuf.h
src/: CMakeLists.txt  Client.cpp  Client.h  ClientEmulator.rc  ClientEmulator.ui  ClientEmulator.vcxproj  ClientEmulator.vcxproj.filters  ComboBoxItemFilter.h  ComboxItemFilter.h  ConfigHelper.cpp  ConfigHelper.h  INetEvent.h  JsonHighlighter.h  LineEdit.cpp  LineEdit.h  LogHelper.h  LuaInterface.h  LuaScriptSystem.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MessageEditor.ui  MessageIgnore.ui  MsgDetailDialog.cpp  MsgDetailDialog.h  MsgEditorDialog.cpp  MsgEditorDialog.h  MsgIgnoreDialog.cpp  MsgIgnoreDialog.h  NetManager.cpp  NetManager.h  ProtoManager.cpp  ProtoManager.h  ProtoTreeItem.cpp  ProtoTreeItem.h  ProtoTreeModel.cpp  ProtoTreeModel.h  Session.cpp  Session.h  Setting.ui  (+12 more)
src/Net/: ConnectionImpl.cpp  ConnectionImpl.h  INetEvent.h  NetManager.cpp  NetManager.h  NetModule.cpp  NetModule.h  Session.cpp  Session.h  SessionManager.cpp  SessionManager.h
src/protobuf/: protobuf.cpp  protobuf.h  protobuflib.c  protobuflib.h
src/toolkit/: Singleton.h
toolkit/: Singleton.h
widget/: LineEdit.cpp  LineEdit.h
